# expander-decomp

./: .gitignore  145rounds.txt  3elt-100.out  3elt-500.out  55-all-lines-graph.txt  55.txt  CMakeLists.txt  H-verts-cut.xcf  README  a.out  all-graph.txt  all-lines-graph.txt  all.out  analyze.py  analyze.sh  barbell10-10.graph  barbell100-100.graph  barbell5-5.graph  barbell6-6.graph  barbell7-7.graph  barbell8-8.graph  batch.zsh  caps_50.txt  chat.txt  cpgen.cpp  fe_rotor.out  graphgen.py  grog.pnt  grogro.ptn  h-phi-100.out  imbalances-graph.txt  l  main.cpp  make-gnuplot.py  make-latex-fig.py  memtester.sh  multi8.graph  new_output.txt  one.zsh  only-walshaw-graph.txt  (+16 more)
15m/: 144-hphi-0.1.out  144-hphi-0.4.out  144-hphi-0.4.out.time  4elt-hphi-0.1.out  add32-hphi-0.1.out.time  add32-hphi-0.1.ptn  add32-hphi-0.4.out  auto-hphi-0.1.out.time  auto-hphi-0.1.ptn  auto-hphi-0.4.out.time  barbell10-10-hphi-0.1.out.time  barbell100-100-hphi-0.1.out  barbell100-100-hphi-0.1.out.time  barbell100-100-hphi-0.4.out  barbell100-100-hphi-0.4.out.time  barbell1000-1000-hphi-0.1.out  barbell1000-1000-hphi-0.4.out  barbell1000-1000-hphi-0.4.out.time  bcsstk33-hphi-0.1.out.time  bcsstk33-hphi-0.4.out  bcsstk33-hphi-0.4.ptn  brack2-hphi-0.1.out  brack2-hphi-0.1.out.time  brack2-hphi-0.4.out  brack2-hphi-0.4.out.time  complete10-hphi-0.4.out.time  complete100-hphi-0.1.out.time  complete100-hphi-0.4.out  complete1000-hphi-0.1.out  complete1000-hphi-0.1.out.time  complete1000-hphi-0.4.out.time  expander1024-hphi-0.1.out.time  expander16-hphi-0.1.out  expander16-hphi-0.1.ptn  (+36 more)
graphs/: k4.graph  (+9 more)
(+1032 files in other folders)
